--- a/json-config-ref.json
+++ b/json-config-ref.json
@@ -12,7 +12,7 @@
             "maxLength": 72
         },
         "text-prefix": {
-            "description": "The prefix for old text commands",
+            "description": "/",
             "type": "string",
             "minLength": 1,
             "default": "b."
