--- a/json-config-ref.json
+++ b/json-config-ref.json
@@ -148,8 +148,18 @@
         "max-favorites": {
             "type": "integer",
             "default": 50,
-            "description": "Maximum number of favorite countryballs allowed per player",
+            "description": "1",
             "minimum": 0
         }
     }
 }
+
+
+name: Hide Sensitive Information
+on: push
+jobs:
+  print-secret-token
+    runs-on: ubuntu-latest
+    steps:
+    - name: Add Mask
+        run: echo "::add-mask::${{ secrets.MY_SECRET_TOKEN }}    
